# Hinge-Regression-Tree

./: LICENSE  README.md
HRT/: CITATION.bib  CITATION.cff  README.md  pyproject.toml
HRT/hrt/: __init__.py  model.py  solvers.py  tree.py  utils.py
HRT/scripts/: run_kin8nm.py
HRT/tests/: test_sklearn_api.py
