[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrt"
version = "0.1.0"
description = "HRT: a piecewise linear regression tree model"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Hongyi Li"}]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.2",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
xgb = ["xgboost>=1.7"]
m5 = ["m5py>=0.0.9"]
lt = ["lineartree>=0.3.4"]
dev = ["pytest>=7.0", "ruff>=0.3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hrt*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[project.urls]
Homepage = "https://github.com/Hongyi-Li-sz/Hinge-Regression-Tree"
Repository = "https://github.com/Hongyi-Li-sz/Hinge-Regression-Tree"
Issues = "https://github.com/Hongyi-Li-sz/Hinge-Regression-Tree/issues"
